add back page counts
